--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Simui</title>
+		<title>SimUI - Modern Angular UI Component Library</title>
+		<meta
+			name="description"
+			content="SimUI is a modern, responsive Angular UI component library for web developers. Build beautiful interfaces with customizable components, dark mode support, and optimal performance." />
+		<meta
+			name="keywords"
+			content="SimUI, Angular UI library, Spartan ui, component library, modern UI components, simple, responsive design" />
+		<meta name="author" content="Simui Development Team" />
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
