--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 		<script>
-			if (localStorage.darkMode === 'dark') {
+			if (localStorage.getItem('simui-appearance') === 'dark') {
 				if (document && document.documentElement) {
 					document.documentElement.classList.add('dark');
 				}
 			} else {
 				if (document && document.documentElement) {
 					document.documentElement.classList.remove('dark');
-					localStorage.setItem('darkMode', 'light');
+					localStorage.setItem('simui-appearance', 'light');
 				}
 			}
 		</script>
